--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       
       <!-- About Me content -->
       <div class="about-content">
-        <p>{{ site.description }}</p>
+        <!-- <p>{{ site.description }}</p> -->
         <p>I'm passionate about technology and photography. Feel free to explore my work and connect with me through the links below.</p>
       </div>
       
